# koopman

./: .gitignore  .pre-commit-config.yaml  .style.yapf  README.md  pyproject.toml  requirements.txt
koopman/: casadi_koopman_pendulum_swingup.ipynb  casadi_lqr.ipynb  casadi_pendulum_swingup.ipynb  dircol.ipynb  edmd.ipynb  experiment2.ipynb  experiment3.ipynb  fucking.py  linearization.ipynb  rando.ipynb  simple_nonlinear_attractor_2d.ipynb  timing_stuff.ipynb  utils.py
koopman/autoencoder/: dataset.py  jacobian_reg_stuff.ipynb  jacobian_regularizer.py  jacreg2.ipynb  model.py  train.py  training_loop.py
koopman/autoencoder/attractor/: attractor_data.pt  generate_data.py  train.py
koopman/autoencoder/duffing/: generate_data.py
koopman/autoencoder/pendulum/: generate_data.py  model.pth  train.py
koopman/autoencoder/pendulum_ctrl/: 2model.pth  gen_ctrl_data.ipynb  generate_data.py  model.pth  swingup_trajopt.ipynb  train.py
koopman/autoencoder/van_der_pol/: generate_data.py
koopman/edmd/: edmd.py  edmd_attractor.ipynb  edmd_pendulum.ipynb  edmd_pendulum_gleb.py  python_random.ipynb
koopman/edmd/2body/: fit_edmd.ipynb
koopman/edmd2/: duffing_oscillator.ipynb  edmdc_with_controls.ipynb  linearization.ipynb  linterp_dynamics.ipynb
koopman/ilqr/: ilqr_koopman.ipynb  ilqr_vanilla copy.ipynb  ilqr_vanilla.ipynb
koopman/not_koopman/: pendulum.py  pendulum_simple_autoencoder.ipynb
koopman/playground/: casadi_test.ipynb  continuous_koopman.ipynb
koopman/simulation/: animation.py  simulator.py  systems.py  test_simulation.ipynb
(+7 files in other folders)
