[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koopman"
version = "0.1.0"
description = "Koopman dynamics"
authors = [
    { name = "Micah Reich", email = "mreich@andrew.cmu.edu" },
    { name = "Gleb Ryabstev", email = "gryabste@andrew.cmu.edu" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "numpy",
    "matplotlib"
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[project.scripts]
my_tool = "koopman.main:main"

[tool.setuptools]
packages = ["koopman"] 

[tool.setuptools.package-data]
"koopman" = ["*.txt", "*.json"] 